--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -593,7 +593,7 @@ td.chbox {
     width: 300px;
     margin-left: 18px;
     font-size: 12px;
-    color: #bdc3c7;
+    color: #595a5a;
     font-family: 'Open Sans Regular', sans-serif; 
 }
 
@@ -997,17 +997,22 @@ a.down:hover {
     }
 
     .post .userinfo {
-        width: 26%;
+        width: 14%;
 		padding: 40px 0px 15px 0px;
     }
-
+	.userinfo  img{
+		max-height: 50px;
+	}
     .post .posttext {
-        width: 70%;
+        width: 86%;
         padding-right: 15px;
         padding-top: 15px;
         padding-bottom: 15px;
     }
-
+	.post .avatar {
+		width: 37px;
+		margin-left: 0px;
+	}
     .post .comments .commentbg {
         font-size: 12px;
         padding: 7px;
@@ -1144,7 +1149,10 @@ a.down:hover {
         padding-top: 15px;
         padding-bottom: 15px;
     }
-
+	.post .avatar {
+		width: 37px;
+		margin-left: 0px !important;
+	}
     .post .comments .commentbg {
         font-size: 12px;
         padding: 7px;
